@@ -20,7 +20,6 @@ package org.apache.pinot.core.util;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.apache.pinot.spi.utils.Pairs;
 import org.apache.pinot.spi.utils.Pairs.IntPair;
@@ -35,7 +34,7 @@ public class SortedRangeIntersection {
 
   public static List<IntPair> intersectSortedRangeSets(List<List<IntPair>> sortedRangeSetList) {
     if (sortedRangeSetList == null || sortedRangeSetList.isEmpty()) {
-      return Collections.emptyList();
+      return List.of();
     }
     if (sortedRangeSetList.size() == 1) {
       return sortedRangeSetList.get(0);
@@ -43,7 +42,7 @@ public class SortedRangeIntersection {
     // if any list is empty return empty
     for (List<IntPair> rangeSet : sortedRangeSetList) {
       if (rangeSet.isEmpty()) {
-        return Collections.emptyList();
+        return List.of();
       }
     }
     int[] currentRangeSetIndex = new int[sortedRangeSetList.size()];
