@@ -21,7 +21,6 @@ package org.apache.pinot.core.query.pruner;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -89,7 +88,7 @@ public class SegmentPrunerServiceTest {
 
     List<IndexSegment> actual = service.prune(indexes, queryContext, stats);
 
-    Assert.assertEquals(actual, Collections.emptyList());
+    Assert.assertEquals(actual, List.of());
     Assert.assertEquals(stats.getInvalidSegments(), 0);
   }
 
@@ -104,7 +103,7 @@ public class SegmentPrunerServiceTest {
 
     List<IndexSegment> actual = service.prune(segments, queryContext, new SegmentPrunerStatistics());
 
-    Assert.assertEquals(actual, Collections.emptyList());
+    Assert.assertEquals(actual, List.of());
   }
 
   @Test
@@ -167,7 +166,7 @@ public class SegmentPrunerServiceTest {
 
     List<IndexSegment> actual = service.prune(segments, queryContext, new SegmentPrunerStatistics());
 
-    Assert.assertEquals(actual, Collections.emptyList());
+    Assert.assertEquals(actual, List.of());
   }
 
   @Test
@@ -185,6 +184,42 @@ public class SegmentPrunerServiceTest {
     List<IndexSegment> actual = service.prune(segments, queryContext, new SegmentPrunerStatistics());
 
     Assert.assertEquals(actual, segments);
+  }
+
+  @Test
+  public void emptyQueryableRetainedWithSkipUpsertDelete() {
+    SegmentPrunerService service = new SegmentPrunerService(_emptyPrunerConf);
+    ThreadSafeMutableRoaringBitmap valid = new ThreadSafeMutableRoaringBitmap(0);
+    ThreadSafeMutableRoaringBitmap queryable = new ThreadSafeMutableRoaringBitmap();
+    IndexSegment segment = mockUpsertIndexSegment(10, valid, queryable);
+
+    List<IndexSegment> segments = new ArrayList<>();
+    segments.add(segment);
+    QueryContext queryContext =
+        QueryContextConverterUtils.getQueryContext("select col1 from t1 option(skipUpsertDelete=true)");
+
+    List<IndexSegment> actual = service.prune(segments, queryContext, new SegmentPrunerStatistics());
+
+    Assert.assertEquals(actual, segments);
+  }
+
+  /**
+   * skipUpsertDelete checks valid-docs emptiness specifically, not skipUpsert's blanket bypass: a segment fully
+   * superseded elsewhere (0 valid docs) is still pruned.
+   */
+  @Test
+  public void emptyValidPrunedWithSkipUpsertDelete() {
+    SegmentPrunerService service = new SegmentPrunerService(_emptyPrunerConf);
+    IndexSegment segment = mockUpsertIndexSegment(10, new ThreadSafeMutableRoaringBitmap(), null);
+
+    List<IndexSegment> segments = new ArrayList<>();
+    segments.add(segment);
+    QueryContext queryContext =
+        QueryContextConverterUtils.getQueryContext("select col1 from t1 option(skipUpsertDelete=true)");
+
+    List<IndexSegment> actual = service.prune(segments, queryContext, new SegmentPrunerStatistics());
+
+    Assert.assertEquals(actual, List.of());
   }
 
   @Test
