@@ -20,7 +20,6 @@ package org.apache.pinot.integration.tests;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.apache.pinot.common.response.broker.CursorResponseNative;
@@ -89,7 +88,7 @@ public class CursorCronCleanupIntegrationTest extends BaseClusterIntegrationTest
   }
 
   protected Map<String, String> getHeaders() {
-    return Collections.emptyMap();
+    return Map.of();
   }
 
   protected String getBrokerGetAllResponseStoresApiUrl(String brokerBaseApiUrl) {
@@ -110,7 +109,7 @@ public class CursorCronCleanupIntegrationTest extends BaseClusterIntegrationTest
     // Submit a cursor query -- response will expire in ~3s
     ClusterTest.postQuery(TEST_QUERY,
         ClusterIntegrationTestUtils.getBrokerQueryApiUrl(brokerUrl, false) + "?getCursor=true&numRows=100000",
-        getHeaders(), Collections.emptyMap());
+        getHeaders(), Map.of());
 
     // Verify it was stored
     List<CursorResponseNative> afterCreate = JsonUtils.stringToObject(
