@@ -18,9 +18,9 @@
  */
 package org.apache.pinot.perf.aggregation;
 
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Random;
 import java.util.concurrent.TimeUnit;
@@ -148,7 +148,7 @@ public class BenchmarkModeAggregation extends AbstractAggregationFunctionBenchma
 
   @Override
   protected AggregationFunction<?, ?> createAggregationFunction() {
-    return new ModeAggregationFunction(Collections.singletonList(EXPR), _nullHandlingEnabled);
+    return new ModeAggregationFunction(List.of(EXPR), _nullHandlingEnabled);
   }
 
   @Override
