@@ -20,7 +20,6 @@ package org.apache.pinot.plugin.minion.tasks;
 
 import com.google.common.base.Preconditions;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -28,6 +27,7 @@ import javax.annotation.Nullable;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.pinot.common.metadata.segment.SegmentZKMetadata;
 import org.apache.pinot.core.common.MinionConstants.MergeTask;
+import org.apache.pinot.core.segment.processing.aggregator.ValueAggregatorFactory;
 import org.apache.pinot.core.segment.processing.framework.MergeType;
 import org.apache.pinot.core.segment.processing.framework.SegmentConfig;
 import org.apache.pinot.core.segment.processing.partitioner.PartitionerConfig;
@@ -39,6 +39,7 @@ import org.apache.pinot.spi.config.table.ColumnPartitionConfig;
 import org.apache.pinot.spi.config.table.SegmentPartitionConfig;
 import org.apache.pinot.spi.config.table.TableConfig;
 import org.apache.pinot.spi.data.DateTimeFieldSpec;
+import org.apache.pinot.spi.data.FieldSpec;
 import org.apache.pinot.spi.data.Schema;
 import org.apache.pinot.spi.utils.TimeUtils;
 
@@ -96,7 +97,7 @@ public class MergeTaskUtils {
       Map<String, String> taskConfig) {
     SegmentPartitionConfig segmentPartitionConfig = tableConfig.getIndexingConfig().getSegmentPartitionConfig();
     if (segmentPartitionConfig == null) {
-      return Collections.emptyList();
+      return List.of();
     }
     List<PartitionerConfig> partitionerConfigs = new ArrayList<>();
     Map<String, ColumnPartitionConfig> columnPartitionMap = segmentPartitionConfig.getColumnPartitionMap();
@@ -135,6 +136,52 @@ public class MergeTaskUtils {
       }
     }
     return aggregationTypes;
+  }
+
+  /// Validates the prerequisites for an order sensitive aggregation (FIRSTWITHTIME/LASTWITHTIME) on the given
+  /// column: the column must be a metric column in the schema, and the table must have a time column with a DateTime
+  /// spec in the schema so that the reducer can order the values by the original time. No-op for other aggregation
+  /// types. The given aggregation type must be parseable (see
+  /// [AggregationFunctionType#getAggregationFunctionType(String)]).
+  public static void validateOrderSensitiveAggregation(TableConfig tableConfig, Schema schema, String column,
+      String aggregationType) {
+    AggregationFunctionType aggregationFunctionType = AggregationFunctionType.getAggregationFunctionType(
+        aggregationType);
+    if (!ValueAggregatorFactory.requiresTimeOrdering(aggregationFunctionType)) {
+      return;
+    }
+    FieldSpec fieldSpec = schema.getFieldSpecFor(column);
+    Preconditions.checkState(fieldSpec != null,
+        "Aggregation type: %s on column: %s requires the column to exist in schema!", aggregationType, column);
+    Preconditions.checkState(fieldSpec.getFieldType() == FieldSpec.FieldType.METRIC,
+        "Aggregation type: %s on column: %s requires the column to be a metric column in schema!", aggregationType,
+        column);
+    // The reducer can only order the values by time when the table has a time column resolvable in the schema
+    String timeColumn = tableConfig.getValidationConfig().getTimeColumnName();
+    Preconditions.checkState(timeColumn != null,
+        "Aggregation type: %s on column: %s requires the table to have a time column!", aggregationType, column);
+    Preconditions.checkState(schema.getSpecForTimeColumn(timeColumn) != null,
+        "Aggregation type: %s on column: %s requires the time column: %s to be a DateTime column in schema!",
+        aggregationType, column, timeColumn);
+  }
+
+  /// Validates that a column configured with a bytes-backed rollup aggregation (sketches, AvgPair, TDigest, ...) is
+  /// declared as a `BYTES` column in the schema. These aggregators read the stored column value as a serialized
+  /// object, so a non-BYTES column would fail with a ClassCastException at task runtime. No-op for other (numeric or
+  /// time-ordered) aggregation types. The given aggregation type must be parseable (see
+  /// [AggregationFunctionType#getAggregationFunctionType(String)]).
+  public static void validateAggregationColumnType(Schema schema, String column, String aggregationType) {
+    AggregationFunctionType aggregationFunctionType = AggregationFunctionType.getAggregationFunctionType(
+        aggregationType);
+    if (!ValueAggregatorFactory.isBytesBacked(aggregationFunctionType)) {
+      return;
+    }
+    FieldSpec fieldSpec = schema.getFieldSpecFor(column);
+    Preconditions.checkState(fieldSpec != null,
+        "Aggregation type: %s on column: %s requires the column to exist in schema!", aggregationType, column);
+    Preconditions.checkState(fieldSpec.getDataType() == FieldSpec.DataType.BYTES,
+        "Aggregation type: %s on column: %s requires the column to be of type BYTES in schema, but found: %s",
+        aggregationType, column, fieldSpec.getDataType());
   }
 
   /**
