@@ -21,7 +21,6 @@ package org.apache.pinot.calcite.rel.rules;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import org.apache.calcite.plan.RelOptRule;
 import org.apache.calcite.plan.RelOptRuleCall;
@@ -36,6 +35,7 @@ import org.apache.calcite.rel.core.TableScan;
 import org.apache.calcite.rel.logical.LogicalFilter;
 import org.apache.calcite.rel.logical.LogicalJoin;
 import org.apache.calcite.rel.logical.LogicalProject;
+import org.apache.calcite.rel.logical.LogicalWindow;
 import org.apache.calcite.rel.type.RelDataTypeField;
 import org.apache.calcite.tools.RelBuilderFactory;
 import org.apache.calcite.util.mapping.IntPair;
@@ -98,7 +98,7 @@ public class PinotRelDistributionTraitRule extends RelOptRule {
           ImmutableList.copyOf(join.getSystemFieldList()));
     } else if (relNode instanceof PinotLogicalTableScan) {
       PinotLogicalTableScan tableScan = (PinotLogicalTableScan) relNode;
-      return tableScan.copy(clusterTraitSet.plus(trait), Collections.emptyList());
+      return tableScan.copy(clusterTraitSet.plus(trait), List.of());
     } else {
       return relNode.copy(clusterTraitSet.plus(trait), relNode.getInputs());
     }
@@ -156,6 +156,13 @@ public class PinotRelDistributionTraitRule extends RelOptRule {
       if (inputRelDistribution != null) {
         // Since we only support LEFT RelTrait propagation, the inputRelDistribution can directly be applied
         // b/c the Join node always puts left relation RowTypes then right relation RowTypes sequentially.
+        return inputRelDistribution;
+      }
+    } else if (node instanceof LogicalWindow) {
+      assert inputs.size() == 1;
+      // Window input should be an exchange node that is hash distributed by the window's partition keys
+      RelDistribution inputRelDistribution = inputs.get(0).getTraitSet().getDistribution();
+      if (inputRelDistribution != null) {
         return inputRelDistribution;
       }
     }
