@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.query.planner.plannode;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -40,7 +39,7 @@ public class ExplainedNode extends BasePlanNode {
 
   public ExplainedNode(int stageId, DataSchema dataSchema, @Nullable NodeHint nodeHint, PlanNode input,
       String title, Map<String, Plan.ExplainNode.AttributeValue> attributes) {
-    this(stageId, dataSchema, nodeHint, Collections.singletonList(input), title, attributes);
+    this(stageId, dataSchema, nodeHint, List.of(input), title, attributes);
   }
 
   public ExplainedNode(int stageId, DataSchema dataSchema, @Nullable NodeHint nodeHint, List<PlanNode> inputs,
