@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.segment.spi.index.reader;
 
-import java.util.Collections;
 import java.util.Map;
 import org.apache.pinot.segment.spi.index.IndexReader;
 import org.roaringbitmap.buffer.ImmutableRoaringBitmap;
@@ -43,6 +42,6 @@ public interface VectorIndexReader extends IndexReader {
    * @return map of debug key-value pairs, or empty map if not supported
    */
   default Map<String, Object> getIndexDebugInfo() {
-    return Collections.emptyMap();
+    return Map.of();
   }
 }
