@@ -25,7 +25,6 @@ import java.time.Instant;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -63,7 +62,7 @@ public class GroovyTemplateUtils {
 
   public static Map<String, Object> getTemplateContext(List<String> values) {
     if (values == null) {
-      return Collections.emptyMap();
+      return Map.of();
     }
     Map<String, Object> context = new HashMap<>();
     for (String value : values) {
@@ -77,7 +76,7 @@ public class GroovyTemplateUtils {
 
   public static String renderTemplate(String template)
       throws IOException, ClassNotFoundException {
-    return renderTemplate(template, Collections.emptyMap());
+    return renderTemplate(template, Map.of());
   }
 
   static {
